- Changed to 3 column grid - Fix up overlap issue when resizing

--- a/css/creative.css
+++ b/css/creative.css
@@ -944,3 +944,8 @@ span:hover .hidden-overlay-sm  {
   margin-left: 3px;
   margin-right: 4px;
 }
+
+.align-center {
+  display: table;
+  margin: auto;
+}
